--- a/homework.ipynb
+++ b/homework.ipynb
@@ -373,27 +373,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p3 = (3, 0, 0)"
+    "p3 = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 0, 0)"
+       "3"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,27 +752,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p11 = (3, 9, 20)"
+    "p11 = (3, 8.5, 17.1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 9, 20)"
+       "(3, 8.5, 17.1)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,27 +993,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p16 = 0.875"
+    "p16 = 0.712"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.875"
+       "0.712"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,27 +1041,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p17 = 0.0215"
+    "from scipy.stats import norm\n",
+    "mean = 8.5\n",
+    "stdev = math.sqrt(5)\n",
+    "p17 = 1 - norm.cdf(13, loc=mean, scale=stdev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0215"
+       "np.float64(0.022085672454221328)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,27 +1243,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p20 = [[1, 0, 0, 4], [0, 1, 0, -2], [0, 0, 1, 1]]"
+    "from sympy import Matrix\n",
+    "p20 = Matrix(q20).rref()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[1, 0, 0, 4], [0, 1, 0, -2], [0, 0, 1, 1]]"
+       "(Matrix([\n",
+       " [1, 0, 0, 4.0],\n",
+       " [0, 1, 0,   0],\n",
+       " [0, 0, 1, 2.0]]),\n",
+       " (0, 1, 2))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
