--- a/homework.ipynb
+++ b/homework.ipynb
@@ -752,27 +752,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p11 = (3, 8.5, 17.1)"
+    "p11 = [3, 8.5, 17.1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3, 8.5, 17.1)"
+       "[3, 8.5, 17.1]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,27 +993,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p16 = 0.712"
+    "p16 = 0.73"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.712"
+       "0.73"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,30 +1041,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "from scipy.stats import norm\n",
-    "mean = 8.5\n",
-    "stdev = math.sqrt(5)\n",
+    "mean = np.mean(vineyard[\"lugs_1989\"])\n",
+    "stdev = np.std(vineyard[\"lugs_1990\"], ddof=1)\n",
     "p17 = 1 - norm.cdf(13, loc=mean, scale=stdev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(0.022085672454221328)"
+       "np.float64(1.6054991147984587e-05)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,32 +1243,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "from sympy import Matrix\n",
-    "p20 = Matrix(q20).rref()"
+    "p20 = [[1, 0, 0, 4.0], [0, 1, 0, 0], [0, 0, 1, 2.0]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Matrix([\n",
-       " [1, 0, 0, 4.0],\n",
-       " [0, 1, 0,   0],\n",
-       " [0, 0, 1, 2.0]]),\n",
-       " (0, 1, 2))"
+       "[[1, 0, 0, 4.0], [0, 1, 0, 0], [0, 0, 1, 2.0]]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
