--- a/homework.ipynb
+++ b/homework.ipynb
@@ -752,27 +752,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p11 = [3, 8.5, 17.1]"
+    "p11 = (np.mean(vineyard[\"lugs_1989\"]), np.mean(vineyard[\"lugs_1990\"]), np.mean(vineyard[\"target\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 8.5, 17.1]"
+       "(np.float64(3.2788461538461537),\n",
+       " np.float64(9.653846153846153),\n",
+       " np.float64(18.08653846153846))"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,27 +995,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
-    "p16 = 0.73"
+    "p16 = np.corrcoef(vineyard[\"lugs_1989\"], vineyard[\"lugs_1990\"])[0, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.73"
+       "np.float64(0.7224792530209387)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,30 +1043,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
     "\n",
     "from scipy.stats import norm\n",
-    "mean = np.mean(vineyard[\"lugs_1989\"])\n",
+    "mean = np.mean(vineyard[\"lugs_1990\"])\n",
     "stdev = np.std(vineyard[\"lugs_1990\"], ddof=1)\n",
     "p17 = 1 - norm.cdf(13, loc=mean, scale=stdev)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.float64(1.6054991147984587e-05)"
+       "np.float64(0.07618255849601963)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
